<resources>
    <string name="app_name">Teleprompter</string>
    <string name="delete_script">Delete Script</string>
    <string name="you_do_not_have_any_script_for_teleprompting">You do not have any script for teleprompting</string>
    <string name="enter_script_title">Enter script title</string>
    <string name="enter_script_text">Enter script text</string>
    <string name="import_script">Import Script</string>
    <string name="submit">Submit</string>
    <string name="unable_to_read_file">Unable to read file.</string>
    <string name="unable_to_read_selected_file">Unable to read selected file.</string>
    <string name="invalid_file_type_selected">Invalid file type selected</string>
    <string name="select_teleprompting_time">Select teleprompting time</string>
    <string name="select_date">Select date</string>
    <string name="select_time">Select time</string>
    <string name="select_date_before_time">Please select date before time.</string>
    <string name="title_may_not_be_empty">Script title may not be empty.</string>
    <string name="script_text_may_not_be_empty">Script text may not be empty.</string>
    <string name="teleprompting_date_must_be_after_now">Teleprompting date must be after current time.</string>
    <string name="script_added">Script added.</string>
    <string name="script_saved">Script saved.</string>
    <string name="speed">Speed</string>
    <string name="pause_and_play">Pause and Play</string>

    <!-- Preferences-->
    <string name="pref_theme_light_label">Light</string>
    <string name="pref_theme_dark_label">dark</string>

    <string name="pref_theme_light" translatable="false">light</string>
    <string name="pref_theme_dark" translatable="false">dark</string>
    <string name="pref_teleprompt_theme_key">teleprompt_theme</string>
    <string name="theme">Theme</string>

    <string name="font_size">Teleprompt Font Size</string>
    <string name="pref_teleprompt_font_size_key">teleprompt_font_size</string>

    <string name="pref_font_size_normal_label">Normal</string>
    <string name="pref_font_size_small_label">Small</string>
    <string name="pref_font_size_large_label">Large</string>
    <string name="pref_font_size_huge_label">Huge</string>
    <string name="settiing">Settings</string>

    <string name="small_teleprompt_font_size" translatable="false">18</string>
    <string name="normal_teleprompt_font_size" translatable="false">24</string>
    <string name="large_teleprompt_font_size" translatable="false">32</string>
    <string name="huge_teleprompt_font_size" translatable="false">40</string>
    <string name="are_you_sure_to_delete_script">Are you sure to delete \"%1$s\"?</string>
    <string name="next_script">Next Script</string>
    <string name="no_unread_script_found">No unread script found.</string>
    <string name="add_new_script">Add New Script</string>


</resources>
