<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        android:inputType="textPersonName"
        tools:ignore="Autofill,LabelFor"
        android:background="@drawable/bg_text_field"
        android:hint="@string/enter_script_title"
        android:padding="8dp"
        android:textColor="@color/colorPrimaryText"
        />


    <EditText
        android:id="@+id/et_script_text"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:inputType="textMultiLine"
        tools:ignore="Autofill,LabelFor"
        android:background="@drawable/bg_text_field"
        android:gravity="top"
        app:layout_constraintTop_toBottomOf="@id/et_title"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_script_text"
        android:padding="8dp"
        android:textColor="@color/colorPrimaryText"
        />

    <TextView android:id="@+id/tv_teleprompt_date_label"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/et_script_text"
        android:layout_marginTop="16dp"
        android:text="@string/select_teleprompting_time"
        android:gravity="center_vertical"
        />
    <TextView android:id="@+id/tv_teleprompt_date"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/bg_text_field"
        app:layout_constraintTop_toBottomOf="@id/tv_teleprompt_date_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/guidline_70_percent"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:text="@string/select_date"
        android:gravity="center_vertical"
        />

    <TextView android:id="@+id/tv_teleprompt_time"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/bg_text_field"
        app:layout_constraintTop_toBottomOf="@id/tv_teleprompt_date_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/guidline_70_percent"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:text="@string/select_time"
        android:gravity="center_vertical" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidline_70_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.70"
        />
    <TextView android:id="@+id/tv_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_light"
        tools:text="Title is required"
        app:layout_constraintTop_toBottomOf="@id/tv_teleprompt_date"
        android:layout_marginTop="8dp"
        />

    <Button android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn"
        app:layout_constraintTop_toBottomOf="@id/tv_error"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorWhite"
        android:text="@string/submit"
        android:gravity="center"
        />

</androidx.constraintlayout.widget.ConstraintLayout>